tests/valid_pascal_programs/global_and_local_vars_1.pas
program global_and_local_vars_1;

var
    addedValue: integer;

begin
    addedValue := 5;
    writeln('addedValue=', addedValue);
end.
