tests/invalid_pascal_programs/duplicated_variables.pas
program InvalidExample;
var
  i : integer;
  x : string;
  i : string;
  X : string;
begin
  writeln('true');
end.
